--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -89,7 +89,7 @@ steps:
         echo "--- :arrow_down: Downloading build directory" && \
         buildkite-agent artifact download "build.tar.gz" . --step ":darwin: High Sierra Build" && \
         tar -zxf build.tar.gz && \
-        echo "+++ :microscope: Starting package build" && \
+        echo "+++ :package: Starting package build" && \
         ln -s "$(pwd)" /data/job && cd /data/job/build/packages && bash generate_package.sh brew
     label: ":darwin: High Sierra Package Builder"
     agents:
@@ -103,7 +103,7 @@ steps:
         echo "--- :arrow_down: Downloading build directory" && \
         buildkite-agent artifact download "build.tar.gz" . --step ":darwin: Mojave Build" && \
         tar -zxf build.tar.gz && \
-        echo "+++ :microscope: Starting package build" && \
+        echo "+++ :package: Starting package build" && \
         ln -s "$(pwd)" /data/job && cd /data/job/build/packages && bash generate_package.sh brew
     label: ":darwin: Mojave Package Builder"
     agents:
@@ -117,7 +117,7 @@ steps:
         echo "--- :arrow_down: Downloading build directory" && \
         buildkite-agent artifact download "build.tar.gz" . --step ":ubuntu: 18.04 Build" && \
         tar -zxf build.tar.gz && \
-        echo "+++ :microscope: Starting package build" && \
+        echo "+++ :package: Starting package build" && \
         cd /data/job/build/packages && bash generate_package.sh deb
     label: ":ubuntu: 18.04 Package builder"
     agents:
@@ -137,7 +137,7 @@ steps:
         echo "--- :arrow_down: Downloading build directory" && \
         buildkite-agent artifact download "build.tar.gz" . --step ":fedora: Build" && \
         tar -zxf build.tar.gz && \
-        echo "+++ :microscope: Starting package build" && \
+        echo "+++ :package: Starting package build" && \
         yum install -y rpm-build && \
         mkdir -p /root/rpmbuild/BUILD && \
         mkdir -p /root/rpmbuild/BUILDROOT && \
@@ -164,7 +164,7 @@ steps:
         echo "--- :arrow_down: Downloading build directory" && \
         buildkite-agent artifact download "build.tar.gz" . --step ":centos: Build" && \
         tar -zxf build.tar.gz && \
-        echo "+++ :microscope: Starting package build" && \
+        echo "+++ :package: Starting package build" && \
         yum install -y rpm-build && \
         mkdir -p /root/rpmbuild/BUILD && \
         mkdir -p /root/rpmbuild/BUILDROOT && \
@@ -186,3 +186,29 @@ steps:
       OS: "centos"
       PKGTYPE: "rpm"
     timeout: 15
+
+  - wait
+
+  - command: |
+        echo "--- :arrow_down: Downloading package" && \
+        buildkite-agent artifact download "build/packages/*.deb" docker/dev/. --step ":ubuntu: 18.04 Package builder" && \
+        echo "--- :key: AUTHENTICATING GOOGLE SERVICE ACCOUNT" && \
+        gcloud --quiet auth activate-service-account b1-automation-svc@b1-automation-dev.iam.gserviceaccount.com --key-file=/etc/gcp-service-account.json && \
+        docker-credential-gcr configure-docker && \
+        echo "--- :hammer_and_wrench: BUILDING BUILD IMAGE" && \
+        cd docker/dev \
+        docker build -t eosio/cdt:latest -t eosio/cdt:$BUILDKITE_COMMIT . && \
+        docker tag eosio/cdt:$BUILDKITE_COMMIT gcr.io/b1-automation-dev/eosio/cdt:$BUILDKITE_COMMIT && \
+        docker tag eosio/cdt:latest gcr.io/b1-automation-dev/eosio/cdt:latest && \
+        echo "--- :hand: PUSHING DOCKER IMAGES" && \
+        docker push gcr.io/b1-automation-dev/eosio/cdt:$BUILDKITE_COMMIT && \
+        docker push gcr.io/b1-automation-dev/eosio/cdt:latest && \
+        echo "--- :tada: TRASHING OLD IMAGES" && \
+        docker rmi eosio/cdt:$BUILDKITE_COMMIT && \
+        docker rmi eosio/cdt:latest && \
+        docker rmi gcr.io/b1-automation-dev/eosio/cdt:$BUILDKITE_COMMIT && \
+        docker rmi gcr.io/b1-automation-dev/eosio/cdt:latest
+    label: "Docker build builder"
+    agents:
+      queue: "automation-docker-builder-fleet"
+    timeout: 300
