--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -4,7 +4,7 @@ FROM ubuntu:18.04
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -y install openssl ca-certificates curl wget && rm -rf /var/lib/apt/lists/*
 
 # Install CDT from deb package
-ADD *.deb /
-RUN for filename in $(ls build/packages/*.deb); do /usr/bin/dpkg -i "$filename" && rm -f "$filename"; done
+ADD build/packages/*.deb /
+RUN for filename in $(ls *.deb); do /usr/bin/dpkg -i "$filename" && rm -f "$filename"; done
 
 USER root
