--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,27 +1,27 @@
 steps:
-  # - command: |
-  #     echo "+++ :hammer: Building" && \
-  #     echo 1 | ./build.sh && \
-  #     echo "--- Compressing build directory :compression:" && \
-  #     tar -pczf build.tar.gz build/
-  #   artifact_paths: "build.tar.gz"
-  #   label: ":darwin: High Sierra Build"
-  #   agents:
-  #     role: "macos-builder"
-  #     os: "high-sierra"
-  #   timeout: 60
+  - command: |
+      echo "+++ :hammer: Building" && \
+      echo 1 | ./build.sh && \
+      echo "--- Compressing build directory :compression:" && \
+      tar -pczf build.tar.gz build/
+    artifact_paths: "build.tar.gz"
+    label: ":darwin: High Sierra Build"
+    agents:
+      role: "macos-builder"
+      os: "high-sierra"
+    timeout: 60
 
-  # - command: |
-  #     echo "+++ :hammer: Building" && \
-  #     echo 1 | ./build.sh && \
-  #     echo "--- Compressing build directory :compression:" && \
-  #     tar -pczf build.tar.gz build/
-  #   artifact_paths: "build.tar.gz"
-  #   label: ":darwin: Mojave Build"
-  #   agents:
-  #     role: "builder"
-  #     os: "mojave"
-  #   timeout: 60
+  - command: |
+      echo "+++ :hammer: Building" && \
+      echo 1 | ./build.sh && \
+      echo "--- Compressing build directory :compression:" && \
+      tar -pczf build.tar.gz build/
+    artifact_paths: "build.tar.gz"
+    label: ":darwin: Mojave Build"
+    agents:
+      role: "builder"
+      os: "mojave"
+    timeout: 60
     
   - command: |
         echo "+++ :hammer: Building" && \
@@ -38,80 +38,80 @@ steps:
         workdir: /data/job
     timeout: 60
 
-  # - command: |
-  #       echo "+++ :hammer: Building" && \
-  #       echo 1 | ./build.sh && \
-  #       echo "--- Compressing build directory :compression:" && \
-  #       tar -pczf build.tar.gz build/
-  #   artifact_paths: "build.tar.gz"
-  #   label: ":fedora: Build"
-  #   agents:
-  #     queue: "automation-large-builder-fleet"
-  #   plugins:
-  #     docker#v2.0.0:
-  #       image: "eosio/ci:fedora"
-  #       workdir: /data/job
-  #   timeout: 60
+  - command: |
+        echo "+++ :hammer: Building" && \
+        echo 1 | ./build.sh && \
+        echo "--- Compressing build directory :compression:" && \
+        tar -pczf build.tar.gz build/
+    artifact_paths: "build.tar.gz"
+    label: ":fedora: Build"
+    agents:
+      queue: "automation-large-builder-fleet"
+    plugins:
+      docker#v2.0.0:
+        image: "eosio/ci:fedora"
+        workdir: /data/job
+    timeout: 60
 
-  # - command: |
-  #       echo "+++ :hammer: Building" && \
-  #       echo 1 | ./build.sh && \
-  #       echo "--- Compressing build directory :compression:" && \
-  #       tar -pczf build.tar.gz build/
-  #   artifact_paths: "build.tar.gz"
-  #   label: ":centos: Build"
-  #   agents:
-  #     queue: "automation-large-builder-fleet"
-  #   plugins:
-  #     docker#v2.0.0:
-  #       image: "eosio/ci:centos"
-  #       workdir: /data/job
-  #   timeout: 60
+  - command: |
+        echo "+++ :hammer: Building" && \
+        echo 1 | ./build.sh && \
+        echo "--- Compressing build directory :compression:" && \
+        tar -pczf build.tar.gz build/
+    artifact_paths: "build.tar.gz"
+    label: ":centos: Build"
+    agents:
+      queue: "automation-large-builder-fleet"
+    plugins:
+      docker#v2.0.0:
+        image: "eosio/ci:centos"
+        workdir: /data/job
+    timeout: 60
   
-  # - command: |
-  #       echo "+++ :hammer: Building" && \
-  #       echo 1 | ./build.sh && \
-  #       echo "--- Compressing build directory :compression:" && \
-  #       tar -pczf build.tar.gz build/
-  #   artifact_paths: "build.tar.gz"
-  #   label: ":aws: Build"
-  #   agents:
-  #     queue: "automation-large-builder-fleet"
-  #   plugins:
-  #     docker#v2.0.0:
-  #       image: "eosio/ci:amazonlinux"
-  #       workdir: /data/job
-  #   timeout: 60
+  - command: |
+        echo "+++ :hammer: Building" && \
+        echo 1 | ./build.sh && \
+        echo "--- Compressing build directory :compression:" && \
+        tar -pczf build.tar.gz build/
+    artifact_paths: "build.tar.gz"
+    label: ":aws: Build"
+    agents:
+      queue: "automation-large-builder-fleet"
+    plugins:
+      docker#v2.0.0:
+        image: "eosio/ci:amazonlinux"
+        workdir: /data/job
+    timeout: 60
 
   - wait
 
-  # - command: |
-  #       echo "--- :arrow_down: Downloading build directory" && \
-  #       buildkite-agent artifact download "build.tar.gz" . --step ":darwin: High Sierra Build" && \
-  #       tar -zxf build.tar.gz && \
-  #       echo "+++ :package: Starting package build" && \
-  #       ln -s "$(pwd)" /data/job && cd /data/job/build/packages && bash generate_package.sh brew
-  #   label: ":darwin: High Sierra Package Builder"
-  #   agents:
-  #     role: "macos-builder"
-  #     os: "high-sierra"
-  #   artifact_paths:
-  #     - "build/packages/*.tar.gz"
-  #   timeout: 15
+  - command: |
+        echo "--- :arrow_down: Downloading build directory" && \
+        buildkite-agent artifact download "build.tar.gz" . --step ":darwin: High Sierra Build" && \
+        tar -zxf build.tar.gz && \
+        echo "+++ :package: Starting package build" && \
+        ln -s "$(pwd)" /data/job && cd /data/job/build/packages && bash generate_package.sh brew
+    label: ":darwin: High Sierra Package Builder"
+    agents:
+      role: "macos-builder"
+      os: "high-sierra"
+    artifact_paths:
+      - "build/packages/*.tar.gz"
+    timeout: 15
 
-  # - command: |
-  #       echo "--- :arrow_down: Downloading build directory" && \
-  #       buildkite-agent artifact download "build.tar.gz" . --step ":darwin: Mojave Build" && \
-  #       tar -zxf build.tar.gz && \
-  #       echo "+++ :package: Starting package build" && \
-  #       ln -s "$(pwd)" /data/job && cd /data/job/build/packages && bash generate_package.sh brew
-  #   label: ":darwin: Mojave Package Builder"
-  #   agents:
-  #     role: "builder"
-  #     os: "mojave"
-  #   artifact_paths:
-  #     - "build/packages/*.tar.gz"
-  #   timeout: 15
+  - command: |
+        echo "--- :arrow_down: Downloading build directory" && \
+        buildkite-agent artifact download "build.tar.gz" . --step ":darwin: Mojave Build" && \
+        tar -zxf build.tar.gz && \
+        echo "+++ :package: Starting package build" && \
+        ln -s "$(pwd)" /data/job && cd /data/job/build/packages && bash generate_package.sh brew
+    label: ":darwin: Mojave Package Builder"
+    agents:
+      role: "builder"
+      os: "mojave"
+    artifact_paths:
+      - "build/packages/*.tar.gz"
+    timeout: 15
 
   - command: |
         echo "--- :arrow_down: Downloading build directory" && \
@@ -133,59 +133,59 @@ steps:
       PKGTYPE: "deb"
     timeout: 15
 
-  # - command: |
-  #       echo "--- :arrow_down: Downloading build directory" && \
-  #       buildkite-agent artifact download "build.tar.gz" . --step ":fedora: Build" && \
-  #       tar -zxf build.tar.gz && \
-  #       echo "+++ :package: Starting package build" && \
-  #       yum install -y rpm-build && \
-  #       mkdir -p /root/rpmbuild/BUILD && \
-  #       mkdir -p /root/rpmbuild/BUILDROOT && \
-  #       mkdir -p /root/rpmbuild/RPMS && \
-  #       mkdir -p /root/rpmbuild/SOURCES && \
-  #       mkdir -p /root/rpmbuild/SPECS && \
-  #       mkdir -p /root/rpmbuild/SRPMS && \
-  #       cd /data/job/build/packages && bash generate_package.sh rpm
-  #   label: ":fedora: Package builder"
-  #   agents:
-  #     queue: "automation-large-builder-fleet"
-  #   artifact_paths:
-  #     - "build/packages/x86_64/*.rpm"
-  #   plugins:
-  #     docker#v1.4.0:
-  #       image: "eosio/ci:fedora"
-  #       workdir: /data/job
-  #   env:
-  #     OS: "fedora"
-  #     PKGTYPE: "rpm"
-  #   timeout: 15
+  - command: |
+        echo "--- :arrow_down: Downloading build directory" && \
+        buildkite-agent artifact download "build.tar.gz" . --step ":fedora: Build" && \
+        tar -zxf build.tar.gz && \
+        echo "+++ :package: Starting package build" && \
+        yum install -y rpm-build && \
+        mkdir -p /root/rpmbuild/BUILD && \
+        mkdir -p /root/rpmbuild/BUILDROOT && \
+        mkdir -p /root/rpmbuild/RPMS && \
+        mkdir -p /root/rpmbuild/SOURCES && \
+        mkdir -p /root/rpmbuild/SPECS && \
+        mkdir -p /root/rpmbuild/SRPMS && \
+        cd /data/job/build/packages && bash generate_package.sh rpm
+    label: ":fedora: Package builder"
+    agents:
+      queue: "automation-large-builder-fleet"
+    artifact_paths:
+      - "build/packages/x86_64/*.rpm"
+    plugins:
+      docker#v1.4.0:
+        image: "eosio/ci:fedora"
+        workdir: /data/job
+    env:
+      OS: "fedora"
+      PKGTYPE: "rpm"
+    timeout: 15
 
-  # - command: |
-  #       echo "--- :arrow_down: Downloading build directory" && \
-  #       buildkite-agent artifact download "build.tar.gz" . --step ":centos: Build" && \
-  #       tar -zxf build.tar.gz && \
-  #       echo "+++ :package: Starting package build" && \
-  #       yum install -y rpm-build && \
-  #       mkdir -p /root/rpmbuild/BUILD && \
-  #       mkdir -p /root/rpmbuild/BUILDROOT && \
-  #       mkdir -p /root/rpmbuild/RPMS && \
-  #       mkdir -p /root/rpmbuild/SOURCES && \
-  #       mkdir -p /root/rpmbuild/SPECS && \
-  #       mkdir -p /root/rpmbuild/SRPMS && \
-  #       cd /data/job/build/packages && bash generate_package.sh rpm
-  #   label: ":centos: Package builder"
-  #   agents:
-  #     queue: "automation-large-builder-fleet"
-  #   artifact_paths:
-  #     - "build/packages/x86_64/*.rpm"
-  #   plugins:
-  #     docker#v1.4.0:
-  #       image: "eosio/ci:centos"
-  #       workdir: /data/job
-  #   env:
-  #     OS: "centos"
-  #     PKGTYPE: "rpm"
-  #   timeout: 15
+  - command: |
+        echo "--- :arrow_down: Downloading build directory" && \
+        buildkite-agent artifact download "build.tar.gz" . --step ":centos: Build" && \
+        tar -zxf build.tar.gz && \
+        echo "+++ :package: Starting package build" && \
+        yum install -y rpm-build && \
+        mkdir -p /root/rpmbuild/BUILD && \
+        mkdir -p /root/rpmbuild/BUILDROOT && \
+        mkdir -p /root/rpmbuild/RPMS && \
+        mkdir -p /root/rpmbuild/SOURCES && \
+        mkdir -p /root/rpmbuild/SPECS && \
+        mkdir -p /root/rpmbuild/SRPMS && \
+        cd /data/job/build/packages && bash generate_package.sh rpm
+    label: ":centos: Package builder"
+    agents:
+      queue: "automation-large-builder-fleet"
+    artifact_paths:
+      - "build/packages/x86_64/*.rpm"
+    plugins:
+      docker#v1.4.0:
+        image: "eosio/ci:centos"
+        workdir: /data/job
+    env:
+      OS: "centos"
+      PKGTYPE: "rpm"
+    timeout: 15
 
   - wait
 
